--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
 
 <form method="POST" class="space-y-3">
 <input type="text" name="product" required
-class="w-full p-2 border rounded" placeholder="Enter product name">
+class="w-full p-2 border rounded"
+placeholder="Enter product name">
+
 <button type="submit"
 class="bg-blue-600 text-white px-4 py-2 rounded w-full">
 Search
@@ -23,6 +25,7 @@ Search
 class="bg-orange-500 text-white px-4 py-2 rounded">
 Amazon
 </a>
+
 <a href="{{ product_data.flipkart_link }}" target="_blank"
 class="bg-blue-500 text-white px-4 py-2 rounded">
 Flipkart
