--- a/templates/login.html
+++ b/templates/login.html
@@ -5,10 +5,12 @@
 
 <form method="POST" class="space-y-3">
 <input type="text" name="username" required
-class="w-full p-2 border rounded" placeholder="Username">
+class="w-full p-2 border rounded"
+placeholder="Username">
 
 <input type="password" name="password" required
-class="w-full p-2 border rounded" placeholder="Password">
+class="w-full p-2 border rounded"
+placeholder="Password">
 
 <button type="submit"
 class="bg-blue-600 text-white px-4 py-2 rounded w-full">
